# HW_2_08

./: README.md  main.py  main_ver_1.py  mongo.txt  pyproject.toml
part_1/: main.py  seed.py  test_connect.py
part_2/: consumer.py  models.py  producer.py
